# YAAA

./: .dockerignore  .gitignore  Dockerfile
backend/: pyproject.toml  server.py
backend/core/: arxiv_client.py  chat.py  clustering.py  embeddings.py  llm.py  openalex.py  web_search.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
terraform/azure/: main.tf  variables.tf
terraform/gcp/: main.tf  variables.tf
