[project]
name = "papermap"
version = "0.1.0"
description = "Semantic paper explorer - visualize arxiv research landscape"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "arxiv>=2.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "duckduckgo-search>=6.0.0",
    "pyalex>=0.14",
    "pymupdf>=1.24.0",
    "openai>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
]
